--- a/Debug/makefile
+++ b/Debug/makefile
@@ -1,6 +1,6 @@
 ################################################################################
 # Automatically-generated file. Do not edit!
-# Toolchain: GNU Tools for STM32 (10.3-2021.10)
+# Toolchain: GNU Tools for STM32 (12.3.rel1)
 ################################################################################
 
 -include ../makefile.init
@@ -71,8 +71,8 @@ all: main-build
 main-build: HC-SR04_USB.elf secondary-outputs
 
 # Tool invocations
-HC-SR04_USB.elf HC-SR04_USB.map: $(OBJS) $(USER_OBJS) C:\Users\kamal\OneDrive\Documents\Embedded\ S.C\HC-SR04_USB\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "HC-SR04_USB.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\kamal\OneDrive\Documents\Embedded S.C\HC-SR04_USB\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="HC-SR04_USB.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
+HC-SR04_USB.elf HC-SR04_USB.map: $(OBJS) $(USER_OBJS) C:\Users\kamal\Downloads\HC-SR04_USB\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "HC-SR04_USB.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\kamal\Downloads\HC-SR04_USB\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="HC-SR04_USB.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
